--- a/fly.toml
+++ b/fly.toml
@@ -1,5 +1,6 @@
-app = "directus-fly"
+# fly.toml file generated for directusfly on 2022-09-14T05:00:58Z
 
+app = "directusfly"
 kill_signal = "SIGINT"
 kill_timeout = 5
 processes = []
@@ -11,24 +12,33 @@ processes = []
   entrypoint = "sh"
 
 [mounts]
-  source = "data"
   destination = "/data"
+  source = "data"
 
 [[services]]
   internal_port = 8080
   processes = ["app"]
   protocol = "tcp"
   script_checks = []
-
   [services.concurrency]
     hard_limit = 25
     soft_limit = 20
     type = "connections"
 
+  [[services.http_checks]]
+    grace_period = "5s"
+    interval = 10000
+    method = "get"
+    path = "/healthcheck"
+    protocol = "http"
+    timeout = 2000
+    tls_skip_verify = false
+    [services.http_checks.headers]
+
   [[services.ports]]
+    force_https = true
     handlers = ["http"]
     port = 80
-    force_https = true
 
   [[services.ports]]
     handlers = ["tls", "http"]
@@ -39,13 +49,3 @@ processes = []
     interval = "15s"
     restart_limit = 0
     timeout = "2s"
-
-  [[services.http_checks]]
-    interval = 10000
-    grace_period = "5s"
-    method = "get"
-    path = "/healthcheck"
-    protocol = "http"
-    timeout = 2000
-    tls_skip_verify = false
-    [services.http_checks.headers]
