--- a/package.json
+++ b/package.json
@@ -1,12 +1,32 @@
 {
-  "name": "directus-railway",
+  "name": "directus-fly",
   "version": "1.0.0",
-  "description": "Directus on railway example",
+  "description": "Directus on fly.io example",
   "scripts": {
+    "deploy": "fly deploy --remote-only",
     "start": "npx directus start"
   },
   "dependencies": {
     "directus": "^9.17.4",
-    "pg": "^8.6.0"
+     "@directus/app": "file:directus-app-9.12.1.tgz",
+     "@directus/drive": "file:directus-drive-9.12.1.tgz",
+     "@directus/drive-azure": "file:directus-drive-azure-9.12.1.tgz",
+     "@directus/drive-gcs": "file:directus-drive-gcs-9.12.1.tgz",
+     "@directus/drive-s3": "file:directus-drive-s3-9.12.1.tgz",
+     "@directus/extensions-sdk": "file:directus-extensions-sdk-9.12.1.tgz",
+     "@directus/format-title": "file:directus-format-title-9.12.1.tgz",
+     "@directus/schema": "file:directus-schema-9.12.1.tgz",
+     "@directus/shared": "file:directus-shared-9.12.1.tgz",
+     "@directus/specs": "file:directus-specs-9.12.1.tgz",
+     "@keyv/redis": "^2.1.2",
+     "directus": "^9.17.4",
+     "directus-extension-wpslug-interface": "^1.1.0",
+     "keyv-memcache": "^1.2.5",
+     "memcached": "^2.2.2",
+     "mysql": "^2.18.1",
+     "nodemailer-mailgun-transport": "^2.1.3",
+     "pg": "^8.6.0",
+     "sqlite3": "^5.0.6",
+     "tedious": "^13.0.0"
   }
 }
