correct healthcheck url

--- a/fly.toml
+++ b/fly.toml
@@ -38,7 +38,7 @@ processes = []
     grace_period = "5s"
     interval = 10000
     method = "get"
-    path = "/healthcheck"
+    path = "/server/health"
     protocol = "http"
     timeout = 2000
     tls_skip_verify = false
